# pikuma_game_engine

./: Cargo.toml  README.org
examples/: load_image.rs
src/: components_systems.rs  ecs.rs  event_bus.rs  fps_stats.rs  lib.rs  main.rs  renderer.rs
src/shaders/: low_res.wgsl  main.wgsl  surface.wgsl  surface_render.wgsl  texture_quad.wgsl
