[package]
name = "pikuma_game_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
glam = { version = "0.24.2", features = ["bytemuck"] }
image = "0.24.7"
pollster = "0.3.0"
wgpu = "0.18.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
